[package]
name = "wiring_game_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy                     = { workspace = true }
bevy_replicon            = { workspace = true }
bevy_replicon_attributes = { workspace = true }
bevy_simplenet           = { workspace = true }
serde                    = { workspace = true }
tracing                  = { workspace = true }

bevy_girk_client_fw       = { workspace = true }
bevy_girk_client_instance = { workspace = true }
bevy_girk_game_fw         = { workspace = true }
bevy_girk_game_instance   = { workspace = true }
bevy_girk_utils           = { workspace = true }
bevy_girk_wiring_common   = { workspace = true }
bevy_girk_wiring_server   = { workspace = true }

client_core = { path = "../client_core" }
game_core   = { path = "../game_core" }
